# CMake_CXX_Project_Template

./: CMakeLists.txt  CMakeLists_8txt.html  Makefile  README.md  conanfile.txt  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals.html  globals_func.html  my__lib_2CMakeLists_8txt.html  my__lib_8cc.html  my__lib_8cc__incl.dot  my__lib_8cc__incl.map  my__lib_8cc__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.dot  my__lib_8h_source.html
.github/workflows/: ubuntu.yml
app/: CMakeLists.txt  main.cc
cmake/: AddGitSubmodule.cmake  Docs.cmake
configured/: config.hpp.in
docs/html/: CMakeLists_8txt.html  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  globals.html  globals_func.html  my__lib_2CMakeLists_8txt.html  my__lib_8cc.html  my__lib_8cc__incl.map  my__lib_8cc__incl.md5  my__lib_8h.html  my__lib_8h__dep__incl.map  my__lib_8h__dep__incl.md5  my__lib_8h_source.html
docs/html/search/: all_0.js  all_3.js  functions_0.js  functions_1.js
search/: all_2.js  all_4.js  functions_1.js  functions_2.js  searchdata.js
src/my_lib/: my_lib.cc  my_lib.h
tests/: CMakeLists.txt  main.cc
